# Engine

./: CMakeLists.txt  README.md
Resources/Models/: cube.fbx
Resources/Shaders/Default/: fragment.glsl  vertex.glsl
api/: CMakeLists.txt
api/src/architecture/: Macros.h
api/src/components/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
api/src/core/: App.cpp  App.h  Core.cpp  Core.h  EntryPoint.h  core.cpp  core.h
api/src/entities/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
api/src/environment/: Window.cpp  Window.h
api/src/graphics/: Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
api/src/layers/: Layer.h  LayerStack.cpp  LayerStack.h
api/src/rendering/: DefaultRenderer.cpp  DefaultRenderer.h  Renderer.h
api/src/scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneStack.cpp  SceneStack.h
api/src/shaders/: DefaultShader.h  Shader.cpp  Shader.h
cmake/: BuildOptions.cmake  Variables.cmake
engine/: CMakeLists.txt
engine/src/: Graphics.cpp  Graphics.h  main.cpp
scripts/: build-run.sh  run.sh
